# torchLinearViz

./: Dockerfile  LICENSE  README.md  epoch_visualizer.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py  temp.html
tests/: demo.py  demoClass.py  demoMNIST.py  demoTorchGraph.py  fuge.py  hage.py  hoge.py
torchLinearViz/: __init__.py  analyse_graph.py  extract_graph.py  torchLinearViz.py
torchLinearViz/cpp_analysis/: graph_analysis.cpp
torchLinearViz/resource/: frontendTest.json  frontendTestDemo.json  frontendTestDemoWoPos.json  output.csv
torchLinearViz/visualization/: server.py  serverSocket.py
torchLinearViz/visualization/static/: frontendTest.html  frontendTestScript.js  index.html  script.js  websocket.html
torchlinearviz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
